--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,13 @@
 /.pnp
 .pnp.js
 
+
 # testing
 /coverage
 
 # production
 /build
+
 
 # misc
 .DS_Store
@@ -17,9 +19,10 @@
 .env.development.local
 .env.test.local
 .env.production.local
-
+.env
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
 
 .env
